--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,17 +18,27 @@ body{
 	justify-content: center;
 	align-content: center;
 	margin:200px auto;
+	 box-shadow: 0px 1px 3px #000;
+  	-webkit-box-shadow: 0px 0px 15px #000;
+  	-moz-box-shadow: 0px 0px 15px #000;
+ 	 box-shadow: 0px 0px 15px #000;
+	 max-width:731px;
+
 
 
 }
 
 .content-input{
 	
-	width:608px;
+	width:500px;
 	height:400px;	
 	background: #FFFFFF;
-	-webkit-box-shadow: 5px 9px 15px -12px #000000; 
-	box-shadow: 5px 9px 15px -12px #000000;
+
+}
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
 }
 
 .content-input .content-title{
@@ -43,7 +53,7 @@ body{
 	font-family: Source Sans Pro;
 	font-style: normal;
 	font-weight: bold;
-	font-size: 37px;
+	font-size: 25px;
 	line-height: 30px;
 	color: #656565;
 
@@ -121,5 +131,66 @@ body{
 
 .content-output{
 	
+	background:rgba(209, 220, 227, 0.18);
+	border-top-right-radius:4px;
+	border-bottom-right-radius:4px;
+	width:231px;
+	max-width:50%;
+
+}
+
+.content-output .output-title{
+
+	margin-top:83px;
+	margin-left:35px;	
+
+}
+
+.content-output .output-title h2{
 	
+
+	font-family: Source Sans Pro;
+	font-style: italic;
+	font-weight: bold;
+	font-size: 16px;
+	line-height: 20px;
+	text-transform: uppercase;
+	color: #3D75BB;
+
+}
+
+
+.content-output .output-title hr{
+
+	mix-blend-mode: normal;
+	opacity: 0.3;
+	border: 1px solid #5D9CEC;
+	width:161px;
+}
+
+
+
+.content-output .output-result{
+
+	display:flex;
+	flex-direction:column;
+	justify-content:center;
+	align-content:center;
+	margin-top:30px;
+	margin-left:30px;
+
+	
+}
+
+
+.content-output .output-result span{
+
+	font-family: Source Sans Pro;
+	font-style: italic;
+	font-weight: normal;
+	font-size: 18px;
+	line-height: 46px;
+	color: #5D9CEC;
+
+
 }
