--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,10 +18,8 @@ body{
 	justify-content: center;
 	align-content: center;
 	margin:200px auto;
-	 box-shadow: 0px 1px 3px #000;
-  	-webkit-box-shadow: 0px 0px 15px #000;
-  	-moz-box-shadow: 0px 0px 15px #000;
- 	 box-shadow: 0px 0px 15px #000;
+	-webkit-box-shadow: 5px 9px 15px -12px #000000; 
+	box-shadow: 5px 9px 15px -12px #000000;
 	 max-width:731px;
 
 
@@ -131,11 +129,11 @@ input[type=number]::-webkit-outer-spin-button {
 
 .content-output{
 	
-	background:rgba(209, 220, 227, 0.18);
 	border-top-right-radius:4px;
 	border-bottom-right-radius:4px;
 	width:231px;
-	max-width:50%;
+	background:rgba(209, 220, 227, 0.18);
+
 
 }
 
@@ -192,5 +190,26 @@ input[type=number]::-webkit-outer-spin-button {
 	line-height: 46px;
 	color: #5D9CEC;
 
+}
 
+@media only screen and (max-width: 730px) {
+	
+.content-input{
+	
+	width:100%;
+	
+}
+
+
+.content-output{
+	
+	width:100%;
+	text-align:center;
+
+}
+
+.content-output .output-title hr{
+
+
+	margin:auto;
 }
